# ogre3dTutorials

./: .gitignore  CMakeLists.txt
config/: plugins.cfg.in
tutorial/: BaseApplication.cpp  CMakeLists.txt  resources.cfg.in
